View Issue Details
ID | Project | Category | View Status | Date Submitted | Last Update |
---|---|---|---|---|---|
0027671 | Open CASCADE | OCCT:VIS | public | 2016-07-11 09:52 | 2016-12-09 16:38 |
Reporter | Assigned To | bugmaster | |||
Priority | normal | Severity | trivial | ||
Status | closed | Resolution | fixed | ||
Product Version | 7.0.0 | ||||
Target Version | 7.1.0 | Fixed in Version | 7.1.0 | ||
Summary | 0027671: Coding - basic IVtk tools do not allow easy sub-classing | ||||
Description | Classes like IVtkOCC_Shape and IVtkTools_ShapeDataSource can be used as-is, or subclassed for fine tuning. If the latter is preferred, then compilation and linker errors may appear (at application side) due to the following minor issues: - Standard_EXPORT macro is missing in IVtkOCC_Shape (see methods GetSubShapeId()), - Members of IVtkTools_ShapeDataSource are declared as private instead of being protected. It is necessary to fix both issues to facilitate the integration of IVtk functionalities into custom applications. | ||||
Tags | No tags attached. | ||||
Test case number | Not needed | ||||
|
Branch CR27671 has been created by ssv. SHA-1: 0266d495fa04a29530b6eb3112d5adb7ce33bdea Detailed log of new commits: Author: ssv Date: Mon Jul 11 11:30:09 2016 +0300 0027671: Basic IVtk tools do not allow easy sub-classing Add missing Standard_EXPORT, change private with protected in shape data source. |
|
Dear kgv, could you please review? |
|
Please check compilation, regression testing is not needed. |
|
Branch CR27671 has been updated forcibly by mkv. SHA-1: c40b150ff350cc11a1382e6b1f196325eafdc36d |
|
Dear BugMaster, Branch CR27671 was rebased on current master of occt git-repository. SHA-1: 3255d3a21602e0a9363c51691dc2b5bfbd98c363 |
|
Dear BugMaster, Branch CR27671 from occt git-repository (and master from products git-repository) was compiled on Linux, MacOS and Windows platforms on Release mode. SHA-1: 3255d3a21602e0a9363c51691dc2b5bfbd98c363 Number of compiler warnings: occt component : Linux: 0 (0 on master) Windows: 0 (0 on master) MacOS : 0 (0 on master) products component : Linux: 64 (64 on master) Windows: 0 (0 on master) MacOS : 1157 |
|
Dear BugMaster, Branch CR27671 is TESTED. |
|
Branch CR27671 has been deleted by inv. SHA-1: c40b150ff350cc11a1382e6b1f196325eafdc36d |
occt: master a7cc4fdd 2016-07-11 08:30:09
Committer: bugmaster Details Diff |
0027671: Basic IVtk tools do not allow easy sub-classing Add missing Standard_EXPORT, change private with protected in shape data source. |
Affected Issues 0027671 |
|
mod - src/IVtkOCC/IVtkOCC_Shape.hxx | Diff File | ||
mod - src/IVtkTools/IVtkTools_ShapeDataSource.hxx | Diff File |
Date Modified | Username | Field | Change |
---|---|---|---|
2016-07-11 09:52 |
|
New Issue | |
2016-07-11 09:52 |
|
Assigned To | => ssv |
2016-07-11 09:53 |
|
Status | new => assigned |
2016-07-11 11:29 | git | Note Added: 0055801 | |
2016-07-11 11:30 |
|
Assigned To | ssv => |
2016-07-11 11:30 |
|
Note Added: 0055802 | |
2016-07-11 11:30 |
|
Assigned To | => kgv |
2016-07-11 11:30 |
|
Status | assigned => resolved |
2016-07-11 12:01 | kgv | Note Added: 0055804 | |
2016-07-11 12:01 | kgv | Assigned To | kgv => bugmaster |
2016-07-11 12:01 | kgv | Severity | minor => trivial |
2016-07-11 12:01 | kgv | Status | resolved => reviewed |
2016-07-11 12:01 | kgv | Product Version | => 7.0.0 |
2016-07-11 12:01 | kgv | Summary | Basic IVtk tools do not allow easy sub-classing => Coding - basic IVtk tools do not allow easy sub-classing |
2016-07-11 12:23 |
|
Assigned To | bugmaster => mkv |
2016-07-11 12:23 |
|
Test case number | => Not needed |
2016-07-11 15:12 | git | Note Added: 0055822 | |
2016-07-11 17:56 |
|
Note Added: 0055832 | |
2016-07-11 17:56 |
|
Note Added: 0055833 | |
2016-07-11 17:56 |
|
Note Added: 0055834 | |
2016-07-11 17:56 |
|
Assigned To | mkv => bugmaster |
2016-07-11 17:56 |
|
Status | reviewed => tested |
2016-07-15 10:44 | bugmaster | Changeset attached | => occt master a7cc4fdd |
2016-07-15 10:44 | bugmaster | Status | tested => verified |
2016-07-15 10:44 | bugmaster | Resolution | open => fixed |
2016-07-22 10:44 | git | Note Added: 0056112 | |
2016-12-09 16:31 |
|
Status | verified => closed |
2016-12-09 16:38 |
|
Fixed in Version | => 7.1.0 |