0027671: Basic IVtk tools do not allow easy sub-classing

Add missing Standard_EXPORT, change private with protected in shape data source.